
export class Constants {
    public static MSG_NEW_WORKSPACE = "NEW_WORKSPACE";

    public static KEY_STORAGE_WORKSPACES = "workspaces";
}

export class MessageResponses {
    public static OK = "OK";
    public static ERROR = "ERROR";
    public static SUCCESS = "SUCCESS";
    public static FAILURE = "FAILURE";
    
}