
// Define an interface for the JSON object
export interface IWorkspaceJson {
    id: number;
    name: string;
    uuid: string;
    tabs: string[];
}

